[ci skip] deploy docs

--- a/index.html
+++ b/index.html
@@ -87,7 +87,17 @@
 <pre><code class="language-properties">Author: Adarsh Pathak
 Github: 16umm001
 </code></pre>
-<p>{:toc}</p>
+<div class="toc">
+<ul>
+<li><a href="#authentication">Authentication</a><ul>
+<li><a href="#register">Register</a></li>
+<li><a href="#login">Login</a></li>
+<li><a href="#logout">Logout</a></li>
+<li><a href="#change-password">Change Password</a></li>
+</ul>
+</li>
+</ul>
+</div>
 <h1 id="authentication">Authentication</h1>
 <h2 id="register">Register</h2>
 <pre><code>POST api/auth/register
@@ -268,5 +278,5 @@ Github: 16umm001
 
 <!--
 MkDocs version : 1.2.3
-Build Date UTC : 2021-11-28 11:57:42.979890+00:00
+Build Date UTC : 2021-11-28 12:02:32.987200+00:00
 -->
